[package]
name = "tcp_over_quic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
quinn = "0.10.2"
rcgen = "0.11.3"

clap = { version = "4.4.7", features = ["derive"] }
rustls = { version = "0.21.8", features = [ "dangerous_configuration" ] }
tokio = { version = "1.33.0", features = [ "macros", "net", "io-util" ] }

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
strip = true
